--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li><a href="./index.html">INICIO</a></li>
                     <li><a href="./pages/shop.html">productos</a></li>
-                    <li><a href="#info">nosotros</a></li>
+                    <li><a href="./pages/about.html">nosotros</a></li>
                 </ul>
             </nav>
             <div>
